--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "name": "mattvick/access-log-parser",
+    "replace": {
+        "mattvick/cf-log-parser": "self.version"
+    },
     "description": "Parse a line from a AWS CloudFront Access Log file into a PHP object",
     "keywords": ["aws","cloudfront","access","log","parser"],
     "type": "proprietary",
